--- a/YS200.html
+++ b/YS200.html
@@ -176,26 +176,26 @@
       <!-- YS-200 -->
       <div id="YS-200" class="container">
         <div id="YS-100" class="container">
-          <div class="mb-lg-0 pt-5 pb-2 mt-2">
+          <div class="mb-lg-0 pt-3 pb-2 mt-2">
             <h2 class="text-center font-weight-extra-bold line-height-7 text-7-8 mb-4" style="color: #0068b7;">YS-200
               智慧音頻主機</h2>
 
             <div class="row alert alert-info">
               <div class="col-lg-6 mb-2 mb-lg-0">
-                <h4 class="text-center font-weight-semibold text-4 mb-1">一機二用</h4>
-                <span class="text-3-4">一個主機可以做為麥克風擴音。<br>也可以做為手機、平板、電腦的無線音頻接收器。</span>
+                <h4 class="text-center font-weight-semibold text-4-5 mb-1">一機二用</h4>
+                <span class="text-4">一個主機可以做為麥克風擴音。<br>也可以做為手機、平板、電腦的無線音頻接收器。</span>
               </div>
               <div class="col-lg-6">
-                <h4 class="text-center font-weight-semibold text-4 mb-1">多機共享</h4>
-                <span class="text-3-4">經由主機內的配對記憶與智慧搜尋，<br>可以共用在不同麥克風或手機、筆電，操作簡單快速。</span>
+                <h4 class="text-center font-weight-semibold text-4-5 mb-1">多機共享</h4>
+                <span class="text-4">經由主機內的配對記憶與智慧搜尋，<br>可以共用在不同麥克風或手機、筆電，操作簡單快速。</span>
               </div>
             </div>
           </div>
 
-          <div class="row mb-4 pb-4 pt-0">
+          <div class="row mb-0 pb-0 pt-0">
             <div class="col-lg-6 mb-0 mb-lg-0">
               <div class="image-hotspots">
-                <img src="img/products/YS-200/YS-200-01.png" class="img-fluid" />
+                <img src="img/products/YS-200/YS-200-01.jpg" class="img-fluid" />
 
                 <a style="left: 15%; top: 17%;" class="image-hotspot image-hotspot-primary"
                   onclick="selectItem('ys-1')">
@@ -227,24 +227,24 @@
               <ol class="list list-ordened list-ordened-style-2 pl-0">
                 <li class="ys-1">
                   <h4 class="font-weight-semibold text-4 mb-0">堅固 6.3mm 插頭 :</h4>
-                  <span class="text-3-4">可達10,000次插拔不損壞。插頭分傳統與特製 L 型，可依設備環境選購</span>
+                  <span class="text-4">可達10,000次插拔不損壞。插頭分傳統與特製 L 型，可依設備環境選購</span>
                 </li>
                 <li class="ys-2">
                   <h4 class="font-weight-semibold text-4 mb-0">特殊線扣設計 :</h4>
-                  <span class="text-3-4">兩端一體性的線扣更強化產品強度 避免因拉扯損壞</span>
+                  <span class="text-4">兩端一體性的線扣更強化產品強度 避免因拉扯損壞</span>
                 </li>
                 <li class="ys-3">
                   <h4 class="font-weight-semibold text-4 mb-0">插頭與主機連接電纜 :</h4>
-                  <span class="text-3-4">經由電纜線連結插頭與主機，讓主機使用時多了彈性，使產品更適應環境的需要</span>
+                  <span class="text-4">經由電纜線連結插頭與主機，讓主機使用時多了彈性，使產品更適應環境的需要</span>
                 </li>
                 <li class="ys-4">
                   <h4 class="font-weight-semibold text-4 mb-0">電源鍵 / 功能鍵 / LED燈號顯示 :</h4>
-                  <span class="text-3-4">電源與功能鍵合而為一，以達輕薄短小目的、操作簡單<br>LED 清晰顯示方式 可輕易了解麥克風狀態</span>   
+                  <span class="text-4">電源與功能鍵合而為一，以達輕薄短小目的、操作簡單<br>LED 清晰顯示方式 可輕易了解麥克風狀態</span>   
                 </li>
                 </li>
                 <li class="ys-5">
                   <h4 class="font-weight-semibold text-4 mb-0">一體成形，無連接線設計 :</h4>
-                  <span class="text-3-4">無額外的連接線，避免接觸不良造成雜音</span>
+                  <span class="text-4">無額外的連接線，避免接觸不良造成雜音</span>
                 </li>
               </ol>
             </div>
@@ -267,27 +267,27 @@
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">自動連接 :</h4>
-                  <span class="text-3-4">免對頻，開機後智慧搜尋，自動連結立即使用一對一連結，保證不串音</span>
+                  <span class="text-4">免對頻，開機後智慧搜尋，自動連結立即使用一對一連結，保證不串音</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">功率調整 :</h4>
-                  <span class="text-3-4">同手機的無線功率動態調整技術；省電，並維護麥克風的擴音品質</span>
+                  <span class="text-4">同手機的無線功率動態調整技術；省電，並維護麥克風的擴音品質</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">抗干擾 :</h4>
-                  <span class="text-3-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾</span>
+                  <span class="text-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">手機藍芽 :</h4>
-                  <span class="text-3-4">可與手機配對連結，播放手機內語音素材，多媒體音樂</span>
+                  <span class="text-4">可與手機配對連結，播放手機內語音素材，多媒體音樂</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">智慧連結 :</h4>
-                  <span class="text-3-4">可配對/記憶多個設備，完全不需回工廠設定</span>
+                  <span class="text-4">可配對/記憶多個設備，完全不需回工廠設定</span>
                 </li>
               </ul>
             </div>
@@ -296,27 +296,27 @@
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">半導體技術開發設計 :</h4>
-                  <span class="text-3-4">體積小、重量輕、壽命長，使用時數更長</span>
+                  <span class="text-4">體積小、重量輕、壽命長，使用時數更長</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">獨家 L型 麥克風插頭 :</h4>
-                  <span class="text-3-4">特製 L型麥克風插頭可完全避免傳統麥克風插頭突出易被撞擊問題</span>
+                  <span class="text-4">特製 L型麥克風插頭可完全避免傳統麥克風插頭突出易被撞擊問題</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">重量 :</h4>
-                  <span class="text-3-4">主機僅重 40g</span>
+                  <span class="text-4">主機僅重 40g</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">距離 :</h4>
-                  <span class="text-3-4">低功率隱藏式天線，距離25 公尺</span>
+                  <span class="text-4">低功率隱藏式天線，距離25 公尺</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">使用時間 :</h4>
-                  <span class="text-3-4">18小時；長效鋰電池加電池保護晶片，壽命長，無記憶效應</span>
+                  <span class="text-4">18小時；長效鋰電池加電池保護晶片，壽命長，無記憶效應</span>
                 </li>
               </ul>
             </div>
