--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
 					</div>
 				</section>
 
-				<section class="section custom-section-shape-background border-0 m-0 pb-0" style="background-color: #FFFFFF;">
+				<section class="section custom-section-shape-background border-0 m-0 p-0" style="background-color: #FFFFFF;">
 					<div class="container position-relative z-index-3 my-4">
 						<div class="row align-items-center justify-content-center">
 							<div class="col-lg-5 pr-lg-5 mb-4 mb-lg-0">
@@ -173,15 +173,15 @@
 							</div>
 							<div class="col-lg-7 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="500">
 								<h6 class="text-color-primary font-weight-medium positive-ls-1 mb-2">YOUNGTONE TECHNOLOGY</h2>
-								<h4 class="font-weight-bold text-transform-none positive-ls-1 text-5 mb-2">公司起源</h3>
-								<p class="line-height-7 text-3-4 mb-2">教學多年的同學一個用了 3年多的無線麥克風，零件已破裂不堪、部分以膠水貼黏、使用時參雜著對頻問題、干擾、雜音、使用時數不夠等問題。</p>
-								<p class="line-height-7 text-3-4 mb-2">走在學校走廊，尖銳不舒服小蜜蜂的聲音此起彼落，老師腰掛個又重又大音箱 身繞有線麥克風匆忙穿梭於教室間。這已是我們校園 20, 30年的常態。
+								<h4 class="font-weight-bold text-transform-none positive-ls-1 text-5-6 mb-2">公司起源</h3>
+								<p class="line-height-7 text-4 mb-2">教學多年的同學一個用了 3年多的無線麥克風，零件已破裂不堪、部分以膠水貼黏、使用時參雜著對頻問題、干擾、雜音、使用時數不夠等問題。</p>
+								<p class="line-height-7 text-4 mb-2">走在學校走廊，尖銳不舒服小蜜蜂的聲音此起彼落，老師腰掛個又重又大音箱 身繞有線麥克風匆忙穿梭於教室間。這已是我們校園 20, 30年的常態。
 								</p>
-								<p class="line-height-7 text-3-4 mb-2">過去，台灣電子業累積深厚的技術基礎，但大都是從事代工或做一些跟隨歐美大廠類似的產品，這些模式只做標準化
+								<p class="line-height-7 text-4 mb-2">過去，台灣電子業累積深厚的技術基礎，但大都是從事代工或做一些跟隨歐美大廠類似的產品，這些模式只做標準化
 									需求與規模量大的商品。電子業是以量取勝的環境，教學/導覽擴音需求相對電子業規模很小，開發的難度高、研發與經營成本將是數倍於一般電子產品，沒有廠商有意願投入。</p>
 								<blockquote class="blockquote-primary">
-									<header class="text-color-primary font-weight-bold text-3-4-5 mb-2">產品是要解決問題的</header>
-									<p class="font-weight-semibold line-height-7 text-3-4 mb-1">
+									<header class="text-color-primary font-weight-bold text-4 mb-2">產品是要解決問題的</header>
+									<p class="font-weight-semibold line-height-7 text-4 mb-1">
 										我們是一群電子科技擁有二十多年工作經驗的好友，各有各的專長；有無線晶片開發、產品工業設計、聲學設計…等等，也一直思考做些新產品回饋社會。看到這個同學這個用了
 										3年多殘破的無線麥克風，簡單的外型、功能也不便利，我們想、以我們的經驗應可以做出更好產品，雖然麥克風產品看似簡單，但須搭配現場使用體驗與不同環境的驗證，產品設計與過程皆比過去產品開發的問題複雜許多，另外還有生產供應鏈問題，但…還是試看吧
 										! 成功了、就可真正改變與解決教育現場/導覽擴音的需要。</p>
@@ -191,13 +191,13 @@
 					</div>
 				</section>
 				
-				<section class="section section-with-shape-divider border-0 lazyload my-5" style="background-color: #f7dec5;">
+				<section class="section section-with-shape-divider border-0 lazyload m-0 pt-4 pb-2" style="background-color: #f7dec5;">
 					<div class="container position-relative z-index-3 spacer">
 						<div class="row align-items-center justify-content-center">
 							<div class="col-lg-7 order-2 order-lg-1 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
 								<h6 class="text-color-primary font-weight-medium positive-ls-1 mb-2">OUR CHALLENGE</h6>
-								<h4 class="font-weight-bold text-transform-none line-height-2 text-5 mb-2">教學環境的問題</h4>
-								<p class="line-height-7 text-3-4 mb-3">教育環境越來越活潑，辛苦備課準備了生動的教材，要如何讓學生參與？</p>
+								<h4 class="font-weight-bold text-transform-none line-height-2 text-5-6 mb-2">教學環境的問題</h4>
+								<p class="line-height-7 text-4 mb-3">教育環境越來越活潑，辛苦備課準備了生動的教材，要如何讓學生參與？</p>
 								<div class="testimonial testimonial-secondary mb-1">
 									<blockquote class="pt-4 pb-4">
 										<p class="mb-2">『感覺麥克風這東西40年沒變了!』</p>
@@ -205,21 +205,21 @@
 									</blockquote>
 									<div class="testimonial-arrow-down"></div>
 									<div class="testimonial-author">
-										<p class="line-height-7 text-3-4 mb-2"><strong class="font-weight-semibold">傳統那重重的麥克風、那條長長的線；又或是小蜜蜂那掛在腰上沉重的音箱，糾結的麥克風都讓使用者付出不小心力，並多出職業病。但電話已經變成手機，映像管電視已經變成又大又清晰的 LCD電視，老三台也變成幾百個頻道外加網路頻道….這些改變，改變了你我的生活 也增加了更多的可能。為什麼麥克風還是跟和二、三十年前一樣呢？</strong></p>
+										<p class="line-height-7 text-4 mb-2"><strong class="font-weight-semibold">傳統那重重的麥克風、那條長長的線；又或是小蜜蜂那掛在腰上沉重的音箱，糾結的麥克風都讓使用者付出不小心力，並多出職業病。但電話已經變成手機，映像管電視已經變成又大又清晰的 LCD電視，老三台也變成幾百個頻道外加網路頻道….這些改變，改變了你我的生活 也增加了更多的可能。為什麼麥克風還是跟和二、三十年前一樣呢？</strong></p>
 									</div>
 								</div>
 								<ul class="list list-icons list-icons-lg">
 									<li>
 										<i class="fas fa-angle-right"></i>
-										<span class="text-3-4">教育環境越來越活潑，辛苦備課準備了生動的教材，要如何讓學生參與？</span>
+										<span class="text-4">教育環境越來越活潑，辛苦備課準備了生動的教材，要如何讓學生參與？</span>
 									</li>
 									<li>
 										<i class="fas fa-angle-right"></i>
-										<span class="text-3-4">學校跑堂、戶外導覽時，一個快0.4公斤的一掛就一天，還有一條有線耳麥纏著，喇叭太大聲 前面太吵，後面又聽不清楚...</span>
+										<span class="text-4">學校跑堂、戶外導覽時，一個快0.4公斤的一掛就一天，還有一條有線耳麥纏著，喇叭太大聲 前面太吵，後面又聽不清楚...</span>
 									</li>
 									<li>
 										<i class="fas fa-angle-right"></i>
-										<span class="text-3-4">肺炎病毒傳染力強，公用麥克風是否成為傳播源，自備一隻輕巧專用無線麥克風 / 擴音器，熟悉又安心</span>
+										<span class="text-4">肺炎病毒傳染力強，公用麥克風是否成為傳播源，自備一隻輕巧專用無線麥克風 / 擴音器，熟悉又安心</span>
 									</li>
 								</ul>
 							</div>
@@ -231,13 +231,13 @@
 				</section>
 
 				<section class="section custom-section-shape-background border-0 m-0 p-0" style="background-color: #FFFFFF;">
-					<div class="container position-relative z-index-3 my-4">
+					<div class="container position-relative z-index-3 my-0 pt-4 pb-2">
 						<div class="row align-items-top justify-content-center">
 							<div class="col-lg-6 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="500">
 								<h6 class="text-color-primary font-weight-medium positive-ls-3 mb-2">WHAT WE DO</h6>
-								<h4 class="font-weight-bold text-transform-none line-height-2 text-5 mb-2">科技帶來的改變</h4>
-								<p class="line-height-7 text-3-4 mb-3">這些年，電子科技帶給來我們生活更加便利</p>
-								<p class="font-weight-semibold text-3-4 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="600" style="display:flex;align-items: center;justify-content: center;">
+								<h4 class="font-weight-bold text-transform-none line-height-2 text-5-6 mb-2">科技帶來的改變</h4>
+								<p class="line-height-7 text-4 mb-3">這些年，電子科技帶給來我們生活更加便利</p>
+								<p class="font-weight-semibold text-4 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="600" style="display:flex;align-items: center;justify-content: center;">
             			<span>這些產品設計最重要的基礎是在
 										<i class="fas fa-angle-left"></i>
 									</span>
@@ -257,7 +257,7 @@
 										</span>
 									</span>
 								</p>
-								<p class="line-height-7 text-3-4 mb-3">十多年手機從 2G  3G  4G 要進入 5G 了，如同手機一般，藉由手機技術的進步，養聲堂無線麥克風希望也能帶來改變，讓無線麥克風開始帶給您更多的便利與未來在工作 / 教學上有更多”無線”的可能!</p>
+								<p class="line-height-7 text-4 mb-3">十多年手機從 2G  3G  4G 要進入 5G 了，如同手機一般，藉由手機技術的進步，養聲堂無線麥克風希望也能帶來改變，讓無線麥克風開始帶給您更多的便利與未來在工作 / 教學上有更多”無線”的可能!</p>
 								<div class="owl-carousel owl-theme nav-inside nav-style-1 nav-light owl-loaded owl-drag owl-carousel-init"
 									data-plugin-options="{'items': 1, 'margin': 10, 'loop': true, 'nav': true, 'dots': false, 'autoplay': true,
 									'autoplayTimeout': 3000}"
@@ -265,7 +265,7 @@
 									<div class="owl-stage-outer">
 										<div class="owl-stage"
 											style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s; width: 1100px;">
-											<div class="owl-item active" style="width: 540px; margin-right: 10px;">
+											<!-- <div class="owl-item active" style="width: 540px; margin-right: 10px;">
 												<div>
 													<div class="img-thumbnail border-0 p-0 d-block">
 														<img class="img-fluid border-radius-0" src="img/about/pic_about_05.jpg" alt="About Image">
@@ -278,7 +278,7 @@
 														<img class="img-fluid border-radius-0" src="img/about/pic_about_04.jpg" alt="About Image">
 													</div>
 												</div>
-											</div>
+											</div> -->
 											<div class="owl-item" style="width: 540px; margin-right: 10px;">
 												<div>
 													<div class="img-thumbnail border-0 p-0 d-block">
@@ -300,6 +300,41 @@
 													</div>
 												</div>
 											</div>
+											<div class="owl-item" style="width: 540px; margin-right: 10px;">
+												<div>
+													<div class="img-thumbnail border-0 p-0 d-block">
+														<img class="img-fluid border-radius-0" src="img/about/pic_about_04.jpg" alt="About Image">
+													</div>
+												</div>
+											</div>
+											<div class="owl-item" style="width: 540px; margin-right: 10px;">
+												<div>
+													<div class="img-thumbnail border-0 p-0 d-block">
+														<img class="img-fluid border-radius-0" src="img/about/pic_about_05.jpg" alt="About Image">
+													</div>
+												</div>
+											</div>
+											<div class="owl-item" style="width: 540px; margin-right: 10px;">
+												<div>
+													<div class="img-thumbnail border-0 p-0 d-block">
+														<img class="img-fluid border-radius-0" src="img/about/pic_about_06.jpg" alt="About Image">
+													</div>
+												</div>
+											</div>
+											<div class="owl-item" style="width: 540px; margin-right: 10px;">
+												<div>
+													<div class="img-thumbnail border-0 p-0 d-block">
+														<img class="img-fluid border-radius-0" src="img/about/pic_about_07.jpg" alt="About Image">
+													</div>
+												</div>
+											</div>
+											<div class="owl-item" style="width: 540px; margin-right: 10px;">
+												<div>
+													<div class="img-thumbnail border-0 p-0 d-block">
+														<img class="img-fluid border-radius-0" src="img/about/pic_about_08.jpg" alt="About Image">
+													</div>
+												</div>
+											</div>
 										</div>
 									</div>
 									<div class="owl-nav"><button type="button" role="presentation" class="owl-prev disabled"></button><button
@@ -310,45 +345,46 @@
 							</div>
 							<div class="col-lg-6 pr-lg-5 mb-4 mb-lg-0 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
 								<h6 class="text-color-primary font-weight-medium positive-ls-3 mb-2">PROMISE</h6>
-								<h4 class="font-weight-bold text-transform-none text-5 line-height-2 mb-2">承諾</h4>
-								<p class="line-height-7 text-3-4 mb-2">現今電子產品皆已朝向數位化、無線化發展，其所借助的就是半導體技術。晶片設計公司將功能整合後，到如台積電等代工廠做成 IC(積體電路)。IC 應用在產品中，讓新產品體積更小、重量輕、特性更穩定、使用時數更長、也不會因使用時間久了零件老化造成品質降低。</p>
-								<p class="line-height-7 text-3-4 mb-2">讓麥克風 / 擴音走向無線、IC 化，方能提供您穩定、輕薄、人體工學設計的產品，讓新科技持續導入到麥克風與擴音系統，讓教學 導覽使用者方便無負擔。</p>
-								<p class="line-height-7 text-3-4 mb-2">不斷嘗試創新 採用高科技技術 保證最好的品質 只要平實的價格 這就是養聲堂。</p>
+								<h4 class="font-weight-bold text-transform-none text-5-6 line-height-2 mb-2">承諾</h4>
+								<p class="line-height-7 text-4 mb-2">現今電子產品皆已朝向數位化、無線化發展，其所借助的就是半導體技術。晶片設計公司將功能整合後，到如台積電等代工廠做成 IC(積體電路)。IC 應用在產品中，讓新產品體積更小、重量輕、特性更穩定、使用時數更長、也不會因使用時間久了零件老化造成品質降低。</p>
+								<p class="line-height-7 text-4 mb-2">讓麥克風 / 擴音走向無線、IC 化，方能提供您穩定、輕薄、人體工學設計的產品，讓新科技持續導入到麥克風與擴音系統，讓教學 導覽使用者方便無負擔。</p>
+								<p class="line-height-7 text-4 mb-2">不斷嘗試創新 採用高科技技術 保證最好的品質 只要平實的價格 這就是養聲堂。</p>
 								<p class="line-height-7 font-weight-bold text-right text-4 mb-2">~ 這是我們的承諾</p>
 							</div>
 						</div>
 					</div>
 				</section>
 
-				<section class="section section-with-shape-divider border-0 lazyload mb-0" style="background-color: #f7dec5;">
+				<section class="section section-with-shape-divider border-0 lazyload my-0 pt-4 pb-2"
+					style="background-color: #f7dec5;">
 					<div class="container position-relative z-index-3 my-2">
 						<div class="row align-items-top justify-content-center">
 							<div class="col-lg-12 appear-animation" data-appear-animation="fadeInRightShorter"
 								data-appear-animation-delay="500">
 								<h6 class="text-color-primary font-weight-medium positive-ls-1 mb-2">OUR OPPORTUNITY</h6>
-								<h4 class="font-weight-bold text-transform-none line-height-2 text-5 mb-2">產品優勢</h4>
+								<h4 class="font-weight-bold text-transform-none line-height-2 text-5-6 mb-2">產品優勢</h4>
 							</div>
 							<div class="col-lg-6 appear-animation" data-appear-animation="fadeInRightShorter"
 								data-appear-animation-delay="500">
 								<ul class="list list-icons list-icons-lg">
 									<li>
-										<i class="fas fa-angle-right"></i>
-										<span class="text-3-4">傳統麥克風,小蜜蜂常沒使用多久就有雜音，只是簡單便宜 ~ 不好用。<br>
+										<i class="fas fa-angle-right text-4"></i>
+										<span class="text-4">傳統麥克風,小蜜蜂常沒使用多久就有雜音，只是簡單便宜 ~ 不好用。<br>
 											養聲堂的產品特色是做到 <span class="text-primary">100% 無線</span>的一體化設計(避免插座連接)，<span class="text-primary">無線信號傳輸 &
 												產品完全沒有 "線"</span>。</span>
 									</li>
 									<li>
-										<i class="fas fa-angle-right"></i>
-										<span class="text-3-4">產品設計皆從<span class="text-primary">人體工學出發</span>，以使用者操作 / 便於攜帶 / 需長時間講演為考量。</span>
+										<i class="fas fa-angle-right text-4"></i>
+										<span class="text-4">產品設計皆從<span class="text-primary">人體工學出發</span>，以使用者操作 / 便於攜帶 / 需長時間講演為考量。</span>
 									</li>
 									<li>
-										<i class="fas fa-angle-right"></i>
-										<span class="text-3-4">能有效的<span class="text-primary">避免喇叭所造成的回授</span>，且<span
+										<i class="fas fa-angle-right text-4"></i>
+										<span class="text-4">能有效的<span class="text-primary">避免喇叭所造成的回授</span>，且<span
 												class="text-primary">麥克風收音穩定靈敏</span>，因收音穩定可避免因喉嚨聲帶緊繃造成傷害。</span>
 									</li>
 									<li>
-										<i class="fas fa-angle-right"></i>
-										<span class="text-3-4">使用<strong>半導體</strong>晶片，如手機般功能多 品質穩定，可以<span class="text-primary">完全避免環境干擾和串音</span>。</span>
+										<i class="fas fa-angle-right text-4"></i>
+										<span class="text-4">使用<strong>半導體</strong>晶片，如手機般功能多 品質穩定，可以<span class="text-primary">完全避免環境干擾和串音</span>。</span>
 									</li>
 								</ul>
 							</div>
@@ -356,19 +392,19 @@
 								data-appear-animation-delay="200">
 								<ul class="list list-icons list-icons-lg">
 									<li>
-										<i class="fas fa-angle-right"></i>
-										<span class="text-3-4">產品<span class="text-primary">重量全世界最輕</span>，手持麥克風70g、頸掛麥克風 40g 、音頻主機38g 、<span
+										<i class="fas fa-angle-right text-4"></i>
+										<span class="text-4">產品<span class="text-primary">重量全世界最輕</span>，手持麥克風70g、頸掛麥克風 40g 、音頻主機38g 、<span
 												class="text-primary">音箱 300g</span>
 												(以上皆含電池)。</span>
 									</li>
 									<li>
-										<i class="fas fa-angle-right"></i>
-										<span class="text-3-4"><span class="text-primary">售後服務</span>有保障 ：產品所有技術與零件皆由公司自行開發與採購
+										<i class="fas fa-angle-right text-4"></i>
+										<span class="text-4"><span class="text-primary">售後服務</span>有保障 ：產品所有技術與零件皆由公司自行開發與採購
 												生產，品質有保障，也可提供售後完整的問題解決或零件更換。</span>
 									</li>
 									<li>
-										<i class="fas fa-angle-right"></i>
-										<span class="text-3-4">無線平台可以讓使用者在麥克風(YS-100，YS-150) / 自有手機 ←→
+										<i class="fas fa-angle-right text-4"></i>
+										<span class="text-4">無線平台可以讓使用者在麥克風(YS-100，YS-150) / 自有手機 ←→
 												音頻主機(YS-200) / 擴音音箱(YS-250)間自由搭配，也可以選用多種麥克風與一個音頻主機/擴音器搭配，不需重複購買相同功能的設備。養聲堂未來產品也可與前期產品搭配使用。</span>
 									</li>
 								</ul>
