--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 					</div> -->
 				</div>
 
-				<section class="section section-height-3 border-0 m-0 pt-5 pb-3">
+				<section class="section section-height-3 border-0 m-0 pt-3 pb-3">
 					<div class="container">
 						<div class="row">
 							<div class="col">
@@ -288,8 +288,8 @@
 										<i class="fas fa-satellite-dish text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold text-4 mb-0">無線傳輸</h4>
-										<p class="text-3-4 mb-3">使用最先進手機無線技術，低幅射 自動對頻 信號穩定 傳輸距離遠 一對一使用不干擾</p>
+										<h4 class="font-weight-bold text-4-5 mb-0">無線傳輸</h4>
+										<p class="text-4 mb-3">使用最先進手機無線技術，低幅射 自動對頻 信號穩定 傳輸距離遠 一對一使用不干擾</p>
 									</div>
 								</div>
 							</div>
@@ -299,8 +299,8 @@
 										<i class="fas fa-feather-alt text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold text-4 mb-0">羽量級麥克風</h4>
-										<p class="mb-1">全球最輕巧麥克風/擴音器、穿戴/手持麥克風小巧精緻，讓您放開手，遠離職業病</p>
+										<h4 class="font-weight-bold text-4-5 mb-0">羽量級麥克風</h4>
+										<p class="text-4 mb-1">全球最輕巧麥克風/擴音器、穿戴/手持麥克風小巧精緻，讓您放開手，遠離職業病</p>
 									</div>
 								</div>
 							</div>
@@ -310,8 +310,8 @@
 										<i class="fas fa-wind text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold text-4 mb-0">千里傳音/隨身擴音器</h4>
-										<p class="text-3-4 mb-3">擴音器輕量化革命設計，特殊聲學設計，兼具手機音樂播放與教學擴音功能(不再音箱腰掛不離身)</p>
+										<h4 class="font-weight-bold text-4-5 mb-0">千里傳音/隨身擴音器</h4>
+										<p class="text-4 mb-3">擴音器輕量化革命設計，特殊聲學設計，兼具手機音樂播放與教學擴音功能(不再音箱腰掛不離身)</p>
 									</div>
 								</div>
 							</div>
@@ -323,8 +323,8 @@
 										<i class="fas fa-user-cog text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold text-4 mb-0">人體工學工業設計</h4>
-										<p class="text-3-4 mb-3">以使用者習慣出發，輕巧舒適為目標，造型優美 質感細緻 操作簡單手機長效鋰電池 USB充電 省錢又環保</p>
+										<h4 class="font-weight-bold text-4-5 mb-0">人體工學工業設計</h4>
+										<p class="text-4 mb-3">以使用者習慣出發，輕巧舒適為目標，造型優美 質感細緻 操作簡單手機長效鋰電池 USB充電 省錢又環保</p>
 									</div>
 								</div>
 							</div>
@@ -334,8 +334,8 @@
 										<i class="fas fa-hand-sparkles text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold text-4 mb-0">個人專用獨享</h4>
-										<p class="text-3-4 mb-3">個人保護 防範肺炎 輕鬆攜帶 隨開即用 傳送您最真實的聲音 適合所有擴音設備</p>
+										<h4 class="font-weight-bold text-4-5 mb-0">個人專用獨享</h4>
+										<p class="text-4 mb-3">個人保護 防範肺炎 輕鬆攜帶 隨開即用 傳送您最真實的聲音 適合所有擴音設備</p>
 									</div>
 								</div>
 							</div>
@@ -345,8 +345,8 @@
 										<i class="fas fa-hand-holding-heart text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold text-4 mb-0">貼心的配件搭配</h4>
-										<p class="text-3-4 mb-3">精心Youtube影片介紹與說明書、特製插頭/USB充電線/背帶吊繩、精選收納袋。讓您有最好的產品體驗</p>
+										<h4 class="font-weight-bold text-4-5 mb-0">貼心的配件搭配</h4>
+										<p class="text-4 mb-3">精心Youtube影片介紹與說明書、特製插頭/USB充電線/背帶吊繩、精選收納袋。讓您有最好的產品體驗</p>
 									</div>
 								</div>
 							</div>
@@ -354,41 +354,41 @@
 					</div>
 				</section>
 
-				<section class="section section-height-3 border-0 m-0 pt-3 pb-3" style="background-color: #f7dec5;">
+				<section class="section section-height-3 border-0 m-0 pt-2 pb-2" style="background-color: #f7dec5;">
 					<div class="container">
 						<div class="row align-items-center py-4 appear-animation" data-appear-animation="fadeInRightShorter">
 							<div class="col-md-8 pr-md-5 mb-5 mb-md-1">
 								<h2 class="font-weight-extra-bold text-5-6 mb-3">為什麼要選擇養聲堂</h2>
 								<ul class="list list-icons list-primary">
 									<li>
-										<i class="fas fa-angle-right text-4"></i>
-										<span class="text-4 font-weight-extra-bold text-primary">養聲堂是唯一專注教學環境領域與行動擴音需求的聲學產品開發公司</span>
+										<i class="fas fa-angle-right text-4-5"></i>
+										<span class="text-4-5 font-weight-extra-bold text-primary">養聲堂是唯一專注教學環境領域與行動擴音需求的聲學產品開發公司</span>
 										<br>
-										<span>讓優質、輕薄、短小麥克風實現在教學與音箱擴音領域。</span>
+										<span class="text-4">讓優質、輕薄、短小麥克風實現在教學與音箱擴音領域。</span>
 									</li>
 									<li>
-										<i class="fas fa-angle-right text-4"></i>
-										<span class="text-4 font-weight-extra-bold text-primary">養聲堂誓願做教育者最佳夥伴</span>
+										<i class="fas fa-angle-right text-4-5"></i>
+										<span class="text-4-5 font-weight-extra-bold text-primary">養聲堂誓願做教育者最佳夥伴</span>
 										<br>
-										<span>養聲堂誓願做教育者最佳夥伴，結合資深的工業設計、電子、聲學等工程師，重新設計與定義麥克風/擴音產品，全部無線化/數位化，進而改善使用者的不便 讓教學方式改變。</span>
+										<span class="text-4">養聲堂誓願做教育者最佳夥伴，結合資深的工業設計、電子、聲學等工程師，重新設計與定義麥克風/擴音產品，全部無線化/數位化，進而改善使用者的不便 讓教學方式改變。</span>
 									</li>
 									<li>
-										<i class="fas fa-angle-right text-4"></i>
-										<span class="text-4 font-weight-extra-bold text-primary">養聲堂產品皆是 100% 全新開發產品</span>
+										<i class="fas fa-angle-right text-4-5"></i>
+										<span class="text-4-5 font-weight-extra-bold text-primary">養聲堂產品皆是 100% 全新開發產品</span>
 										<br>
-										<span>以創新為宗旨，多方面嘗試，將手機新科技帶入產品，重新定義穿戴式科技、做出簡易使用、超輕量無線麥克風/擴音產品。</span>
+										<span class="text-4">以創新為宗旨，多方面嘗試，將手機新科技帶入產品，重新定義穿戴式科技、做出簡易使用、超輕量無線麥克風/擴音產品。</span>
 									</li>
 									<li>
-										<i class="fas fa-angle-right text-4"></i>
-										<span class="text-4 font-weight-extra-bold text-primary">「數位」無線麥克風</span>
+										<i class="fas fa-angle-right text-4-5"></i>
+										<span class="text-4-5 font-weight-extra-bold text-primary">「數位」無線麥克風</span>
 										<br>
-										<span>不再需要對頻、無頻道限制，隨開立即使用，利用數位跳頻技術抗干擾，相鄰教室、使用者之間麥克風不互擾。</span>
+										<span class="text-4">不再需要對頻、無頻道限制，隨開立即使用，利用數位跳頻技術抗干擾，相鄰教室、使用者之間麥克風不互擾。</span>
 									</li>
 									<li>
-										<i class="fas fa-angle-right text-4"></i>
-										<span class="text-4 font-weight-extra-bold text-primary">絕佳的使用體驗</span>
+										<i class="fas fa-angle-right text-4-5"></i>
+										<span class="text-4-5 font-weight-extra-bold text-primary">絕佳的使用體驗</span>
 										<br>
-										<span>養聲堂從產品到說明書/影片說明、配件都以您簡單、方便、舒適、容易上手做規劃，高科技也有輕鬆的體驗。</span>
+										<span class="text-4">養聲堂從產品到說明書/影片說明、配件都以您簡單、方便、舒適、容易上手做規劃，高科技也有輕鬆的體驗。</span>
 									</li>
 								</ul>
 							</div>
@@ -494,7 +494,7 @@
 						<div class="modal-body">
 							<div class="row">
 								<div class="media-left media-top col-sm-12  col-md-5" style="padding-bottom:15px">
-									<img src="img/mic.jpg" class="media-object" style="width:100%">
+									<img src="img/soundBox.jpg" class="media-object" style="width:100%">
 								</div>
 								<div class="col-sm-12 col-md-7">
 									<div>
