--- a/viedo.html
+++ b/viedo.html
@@ -209,6 +209,25 @@
                       thumb-info-bottom-info-show-more thumb-info-centered-icons thumb-info-no-zoom">
                   <span class="thumb-info-wrapper">
                     <img src="img/blog-38.jpg" class="img-fluid" alt="">
+                    <iframe src="https://www.youtube.com/embed/Cu5wZTf9Ddo" class="embed-item"></iframe>
+                    <span class="thumb-info-title">
+                      <span class="thumb-info-type opacity-8">二代智慧無線麥克風擴音系列</span>
+                    </span>
+                    <span class="thumb-info-action">
+                      <a href="https://www.youtube.com/embed/Cu5wZTf9Ddo" target="_blank">
+                        <span class="thumb-info-action-icon thumb-info-action-icon-light">
+                          <i class="fas fa-play-circle text-dark text-dark"></i>
+                        </span>
+                      </a>
+                    </span>
+                  </span>
+                </span>
+              </div>
+              <div class="col-lg-3 mb-3">
+                <span class="thumb-info thumb-info-bottom-info thumb-info-bottom-info-dark
+                      thumb-info-bottom-info-show-more thumb-info-centered-icons thumb-info-no-zoom">
+                  <span class="thumb-info-wrapper">
+                    <img src="img/blog-38.jpg" class="img-fluid" alt="">
                     <iframe src="https://www.youtube.com/embed/KWa_IAMtLTc" class="embed-item"></iframe>
                     <span class="thumb-info-title">
                       <span class="thumb-info-type opacity-8">穿戴式無線麥克風使用</span>
@@ -242,6 +261,8 @@
                   </span>
                 </span>
               </div>
+            </div>
+            <div class="row mt-lg-3">
               <div class="col-lg-3 mb-3">
                 <span class="thumb-info thumb-info-bottom-info thumb-info-bottom-info-dark
                       thumb-info-bottom-info-show-more thumb-info-centered-icons thumb-info-no-zoom">
@@ -261,8 +282,6 @@
                   </span>
                 </span>
               </div>
-            </div>
-            <div class="row mt-lg-3">
               <div class="col-lg-3 mb-3">
                 <span class="thumb-info thumb-info-bottom-info thumb-info-bottom-info-dark
                       thumb-info-bottom-info-show-more thumb-info-centered-icons thumb-info-no-zoom">
@@ -326,6 +345,8 @@
                   </span>
                 </span>
               </div>
+            </div>
+            <div class="row mt-lg-3">
               <div class="col-lg-3 mb-3">
                 <span class="thumb-info thumb-info-bottom-info thumb-info-bottom-info-dark
                       thumb-info-bottom-info-show-more thumb-info-centered-icons thumb-info-no-zoom">
@@ -347,8 +368,6 @@
                   </span>
                 </span>
               </div>
-            </div>
-            <div class="row mt-lg-3">
               <div class="col-lg-3 mb-3">
                 <span class="thumb-info thumb-info-bottom-info thumb-info-bottom-info-dark
                       thumb-info-bottom-info-show-more thumb-info-centered-icons thumb-info-no-zoom">
