--- a/YS100.html
+++ b/YS100.html
@@ -176,14 +176,14 @@
       <!-- YS-100 -->
       <div id="YS-100" class="container">
         <div class="container">
-          <div class="mb-lg-0 pt-5 pb-5 mt-2">
+          <div class="mb-lg-0 pt-3 pb-3 mt-2">
             <h2 class="text-center font-weight-extra-bold line-height-7 text-7-8 mb-0" style="color: #0068b7;">YS-100
               手持數位無線麥克風</h2>
             <p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">全世界第一款 輕盈又適合長時間使用的麥克風</p>
             <p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">開機自動搜尋、動態自動對頻、一對一自動連結</p>
           </div>
 
-          <div class="row mb-4 pb-4 pt-5" style="align-items: flex-start;">
+          <div class="row mb-4 pb-0 pt-5" style="align-items: flex-start;">
             <div class="col-lg-6 mb-0 mb-lg-0">
               <div class="image-hotspots">
                 <img src="img/products/YS-100/YS-100-01.jpg" class="img-fluid" />
@@ -223,31 +223,31 @@
               <ol class="list list-ordened list-ordened-style-2 pl-0">
                 <li class="ys-1">
                   <h4 class="font-weight-semibold text-4 mb-0">麥克風網罩 :</h4>
-                  <span class="text-3-4">網罩與機身一體，人體工學設計機身，尺寸恰符合男女手掌合握</span>
+                  <span class="text-4">網罩與機身一體，人體工學設計機身，尺寸恰符合男女手掌合握</span>
                 </li>
                 <li class="ys-2">
                   <h4 class="font-weight-semibold text-4 mb-0">海綿套 :</h4>
-                  <span class="text-3-4">海棉套嵌入式設計，3D立體造型外觀，海棉套內置於網罩內可保持清潔，也可更換</span>
+                  <span class="text-4">海棉套嵌入式設計，3D立體造型外觀，海棉套內置於網罩內可保持清潔，也可更換</span>
                 </li>
                 <li class="ys-3">
                   <h4 class="font-weight-semibold text-4 mb-0">電源鍵 / 功能鍵 :</h4>
-                  <span class="text-3-4">大按鍵設計，簡易操作，集合開/關機，配對功能於一</span>
+                  <span class="text-4">大按鍵設計，簡易操作，集合開/關機，配對功能於一</span>
                 </li>
                 <li class="ys-4">
                   <h4 class="font-weight-semibold text-4 mb-0">LED燈號顯示 :</h4>
-                  <span class="text-3-4">LED 清晰顯示方式，可輕易了解麥克風狀態</span>
+                  <span class="text-4">LED 清晰顯示方式，可輕易了解麥克風狀態</span>
                 </li>
                 <li class="ys-5">
                   <h4 class="font-weight-semibold text-4 mb-0">音量+ / 音量- :</h4>
-                  <span class="text-3-4">符合人體工學設計，可遠程調控擴音音量</span>
+                  <span class="text-4">符合人體工學設計，可遠程調控擴音音量</span>
                 </li>
                 <li class="ys-6">
                   <h4 class="font-weight-semibold text-4 mb-0">双吊繩孔 (手腕, 頸掛) :</h4>
-                  <span class="text-3-4">麥克風的底部與背面有兩組吊繩孔設計，可搭配短吊繩(手腕)、長吊繩(頸掛)，兼顧美觀與使用便利</span>
+                  <span class="text-4">麥克風的底部與背面有兩組吊繩孔設計，可搭配短吊繩(手腕)、長吊繩(頸掛)，兼顧美觀與使用便利</span>
                 </li>
                 <li class="ys-7">
                   <h4 class="font-weight-semibold text-4 mb-0">USB 充電 :</h4>
-                  <span class="text-3-4">採用歐盟標準 USB 5V充電，內建鋰電池，輕巧、環保、壽命長</span>
+                  <span class="text-4">採用歐盟標準 USB 5V充電，內建鋰電池，輕巧、環保、壽命長</span>
                 </li>
               </ol>
               <div class="pro-spec">
@@ -295,27 +295,27 @@
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">自動連接 :</h4>
-                  <span class="text-3-4">免對頻，開機後智慧搜尋，自動連結立即使用一對一連結，保證不串音</span>
+                  <span class="text-4">免對頻，開機後智慧搜尋，自動連結立即使用一對一連結，保證不串音</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">功率調整 :</h4>
-                  <span class="text-3-4">同手機的無線功率動態調整技術；省電，並維護麥克風的擴音品質</span>
+                  <span class="text-4">同手機的無線功率動態調整技術；省電，並維護麥克風的擴音品質</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">抗干擾 :</h4>
-                  <span class="text-3-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾</span>
+                  <span class="text-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">智慧連結 :</h4>
-                  <span class="text-3-4">可配對/記憶多個設備，完全不需回工廠設定。</span>
+                  <span class="text-4">可配對/記憶多個設備，完全不需回工廠設定。</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">環境回授 :</h4>
-                  <span class="text-3-4">特殊麥克風收音設計，避免環境喇叭聲音的回授</span>
+                  <span class="text-4">特殊麥克風收音設計，避免環境喇叭聲音的回授</span>
                 </li>
               </ul>
             </div>
@@ -324,32 +324,32 @@
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">半導體技術開發設計 :</h4>
-                  <span class="text-3-4">體積小、重量輕、壽命長，使用時數更長</span>
+                  <span class="text-4">體積小、重量輕、壽命長，使用時數更長</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">產品設計 :</h4>
-                  <span class="text-3-4">人體工學設計，以使用者便利與外觀為設計理念</span>
+                  <span class="text-4">人體工學設計，以使用者便利與外觀為設計理念</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">重量 / 外觀 :</h4>
-                  <span class="text-3-4">75g，高度 17cm；麥克風剛好一手掌握，男女適用</span>
+                  <span class="text-4">75g，高度 17cm；麥克風剛好一手掌握，男女適用</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">配掛 :</h4>
-                  <span class="text-3-4">背面有兩組吊繩設計，可將吊繩掛在手腕或脖子上</span>
+                  <span class="text-4">背面有兩組吊繩設計，可將吊繩掛在手腕或脖子上</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">距離 :</h4>
-                  <span class="text-3-4">低功率隱藏式天線，距離25 公尺</span>
+                  <span class="text-4">低功率隱藏式天線，距離25 公尺</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">使用時間 :</h4>
-                  <span class="text-3-4">16 小時；長效鋰電池加電池保護晶片，壽命長，無記憶效應</span>
+                  <span class="text-4">16 小時；長效鋰電池加電池保護晶片，壽命長，無記憶效應</span>
                 </li>
               </ul>
             </div>
