--- a/YS150.html
+++ b/YS150.html
@@ -176,14 +176,14 @@
 			<!-- YS-150 -->
 			<div id="YS-150" class="container">
 				<div class="container">
-					<div class="mb-lg-0 pt-5 pb-5 mt-2">
+					<div class="mb-lg-0 pt-3 pb-3 mt-2">
 						<h2 class="text-center font-weight-extra-bold line-height-7 text-7-8 mb-0" style="color: #0068b7;">YS-150
 							頸掛數位無線麥克風</h2>
-						<p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">全球獨創的頸掛穿戴設計</p>
-						<p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">40g 輕盈的人體工學機身</p>
+						<p class="text-center font-weight-extra-bold line-height-7 text-4-5 mb-0">全球獨創的頸掛穿戴設計</p>
+						<p class="text-center font-weight-extra-bold line-height-7 text-4-5 mb-0">40g 輕盈的人體工學機身</p>
 					</div>
 
-					<div class="row mb-4 pb-4 pt-2" style="align-items: flex-start;">
+					<div class="row mb-4 pb-0 pt-2" style="align-items: flex-start;">
 						<div class="col-lg-6 mb-0 mb-lg-0">
 							<div class="image-hotspots">
 								<img src="img/products/YS-150/YS-150-01a.jpg" class="img-fluid" />
@@ -276,27 +276,27 @@
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">自動連接 :</h4>
-									<span class="text-3-4">免對頻，開機後智慧搜尋，自動連結立即使用一對一連結，保證不串音</span>
+									<span class="text-4">免對頻，開機後智慧搜尋，自動連結立即使用一對一連結，保證不串音</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">功率調整 :</h4>
-									<span class="text-3-4">同手機的無線功率動態調整技術，省電，並維護麥克風的擴音品質</span>
+									<span class="text-4">同手機的無線功率動態調整技術，省電，並維護麥克風的擴音品質</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">抗干擾 :</h4>
-									<span class="text-3-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾</span>
+									<span class="text-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">智慧連結 :</h4>
-									<span class="text-3-4">可配對/記憶多個設備，完全不需回工廠設定</span>
+									<span class="text-4">可配對/記憶多個設備，完全不需回工廠設定</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">環境回授 :</h4>
-									<span class="text-3-4">特殊指向麥克風設計，避免環境喇叭聲音的回授</span>
+									<span class="text-4">特殊指向麥克風設計，避免環境喇叭聲音的回授</span>
 								</li>
 							</ul>
 						</div>
@@ -305,27 +305,27 @@
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">半導體技術開發設計 :</h4>
-									<span class="text-3-4">體積小、重量輕、壽命長，使用時數更長</span>
+									<span class="text-4">體積小、重量輕、壽命長，使用時數更長</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">產品設計 :</h4>
-									<span class="text-3-4">全球唯一以使用者便利與外觀為設計理念，人體工學設計穿戴式麥克風</span>
+									<span class="text-4">全球唯一以使用者便利與外觀為設計理念，人體工學設計穿戴式麥克風</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">重量 :</h4>
-									<span class="text-3-4">機身全部僅 40g</span>
+									<span class="text-4">機身全部僅 40g</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">距離 :</h4>
-									<span class="text-3-4">低功率隱藏式天線，距離25 公尺</span>
+									<span class="text-4">低功率隱藏式天線，距離25 公尺</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">使用時間 :</h4>
-									<span class="text-3-4">13小時；長效鋰電池加電池保護晶片，壽命長，無記憶效應</span>
+									<span class="text-4">13小時；長效鋰電池加電池保護晶片，壽命長，無記憶效應</span>
 								</li>
 							</ul>
 						</div>
