--- a/YS250.html
+++ b/YS250.html
@@ -176,7 +176,7 @@
       <!-- YS-250 -->
       <div id="YS-250" class="container">
         <div class="container">
-          <div class="mb-lg-0 pt-5 pb-5 mt-2">
+          <div class="mb-lg-0 pt-3 pb-3 mt-2">
             <h2 class="text-center font-weight-extra-bold line-height-7 text-7-8 mb-0" style="color: #0068b7;">YS-250
               數位無線擴音音箱
             </h2>
@@ -184,7 +184,7 @@
             <p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">重量輕 音質清晰 自動對頻 可邊充邊用</p>
           </div>
 
-          <div class="row mb-4 pb-4 pt-0">
+          <div class="row mb-0 pb-0 pt-0">
             <div class="col-lg-6 mb-0 mb-lg-0">
               <div class="image-hotspots">
                 <img src="img/products/YS-250/YS-250.jpg" class="img-fluid" />
@@ -234,39 +234,39 @@
               <ol class="list list-ordened list-ordened-style-2 pl-0">
                 <li class="ys-1">
                   <h4 class="font-weight-semibold text-4 mb-0">電量顯示按鍵 / 顯示 LED :</h4>
-                  <span class="text-3-4">四階 LED 電量顯示燈，讓您立即知道音箱電量<br>
+                  <span class="text-4">四階 LED 電量顯示燈，讓您立即知道音箱電量<br>
                     高效鋰電池，無記憶效應，可以隨時充電，保持高效率</span>
                 </li>
                 <li class="ys-2">
                   <h4 class="font-weight-semibold text-4 mb-0">音量調整旋鈕 :</h4>
-                  <span class="text-3-4">旋紐手感佳大方，清楚標示音量</span>
+                  <span class="text-4">旋紐手感佳大方，清楚標示音量</span>
                 </li>
                 <li class="ys-3">
                   <h4 class="font-weight-semibold text-4 mb-0">開機鍵 :</h4>
-                  <span class="text-3-4">開機/關機 : 功能鍵按 2 秒。<br>配對 :功能鍵按 5 秒</span>
+                  <span class="text-4">開機/關機 : 功能鍵按 2 秒。<br>配對 :功能鍵按 5 秒</span>
                 </li>
                 <li class="ys-4">
                   <h4 class="font-weight-semibold text-4 mb-0">連線指示燈 :</h4>
-                  <span class="text-3-4">正常連線：藍燈4 秒閃一次<br>連線異常：藍燈4 秒閃二次</span>
+                  <span class="text-4">正常連線：藍燈4 秒閃一次<br>連線異常：藍燈4 秒閃二次</span>
                 </li>
                 <li class="ys-5">
                   <h4 class="font-weight-semibold text-4 mb-0">充電指示燈 :</h4>
-                  <span class="text-3-4">充電中：紅燈長亮<br>
+                  <span class="text-4">充電中：紅燈長亮<br>
                     充電完成：藍燈長亮</span>
                 </li>
                 <li class="ys-6">
                   <h4 class="font-weight-semibold text-4 mb-0">USB 充電孔 :</h4>
-                  <span class="text-3-4">採用國際標準 USB 電壓，內建電動車等級高效鋰電池，充電器為 5V 1.2A (安培)，輕巧、環保、壽命長<br>
+                  <span class="text-4">採用國際標準 USB 電壓，內建電動車等級高效鋰電池，充電器為 5V 1.2A (安培)，輕巧、環保、壽命長<br>
                     搭配特製Y型充電線，可以同時充電麥克風與音箱</span>
                 </li>
                 <a name="ys-6"></a>
                 <li class="ys-7">
                   <h4 class="font-weight-semibold text-4 mb-0">吊帶 :</h4>
-                  <span class="text-3-4">傳統鐵扣背帶長期使用會會磨損音箱，我公司特開發類單眼相機背帶，兼顧舒適性，現代感，易背掛與音箱保護</span>
+                  <span class="text-4">傳統鐵扣背帶長期使用會會磨損音箱，我公司特開發類單眼相機背帶，兼顧舒適性，現代感，易背掛與音箱保護</span>
                 </li>
                 <li class="ys-8">
                   <h4 class="font-weight-semibold text-4 mb-0">(專業版)有線麥克風 :</h4>
-                  <span class="text-3-4">可與無線麥克風擴音混音共用；或同時有線講演搭配手機播放音樂/教材</span>
+                  <span class="text-4">可與無線麥克風擴音混音共用；或同時有線講演搭配手機播放音樂/教材</span>
                 </li>                
               </ol>
               <div class="pro-spec">
@@ -310,43 +310,43 @@
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">音質 :</h4>
-                  <span class="text-3-4">藍牙立體聲，音質清晰，人聲原音重現</span>
+                  <span class="text-4">藍牙立體聲，音質清晰，人聲原音重現</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">外觀/重量 :</h4>
-                  <span class="text-3-4">流線外型，新潮外觀，體積小巧，可擺放使用，可以行動攜掛</span>
+                  <span class="text-4">流線外型，新潮外觀，體積小巧，可擺放使用，可以行動攜掛</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">半導體技術開發設計 :</h4>
-                  <span class="text-3-4">體積小、重量輕、壽命長、使用時數更長。</span>
+                  <span class="text-4">體積小、重量輕、壽命長、使用時數更長。</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">手機無線技術 :</h4>
-                  <span class="text-3-4">低幅射、免對頻、距離遠、設備間不干擾。</span>
+                  <span class="text-4">低幅射、免對頻、距離遠、設備間不干擾。</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">人體工學工業設計 :</h4>
-                  <span class="text-3-4">以使用者習慣出發，輕巧舒適為目標，造型優雅，質感細緻</span>
+                  <span class="text-4">以使用者習慣出發，輕巧舒適為目標，造型優雅，質感細緻</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">電池 :</h4>
-                  <span class="text-3-4">電動車等級Panasonics強效鋰電池，環保 USB 充電</span>
+                  <span class="text-4">電動車等級Panasonics強效鋰電池，環保 USB 充電</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">喇叭 :</h4>
-                  <span class="text-3-4">稀有金屬 <span
+                  <span class="text-4">稀有金屬 <span
                       class="text-success font-weight-semibold text-4">釹鐵硼</span> 磁鐵喇叭積小，重量輕，效率高。</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">擴音功率 :</h4>
-                  <span class="text-3-4">聲音宏亮，擴音範圍涵蓋 10米平方標準教室</span>
+                  <span class="text-4">聲音宏亮，擴音範圍涵蓋 10米平方標準教室</span>
                 </li>
               </ul>
             </div>
@@ -356,45 +356,45 @@
                   data-appear-animation-delay="300">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">創新技術 / 功能 :</h4>
-                  <span class="text-3-4">一麥雙享 : 一個麥克風 兩個音箱同步一起擴音<br>
+                  <span class="text-4">一麥雙享 : 一個麥克風 兩個音箱同步一起擴音<br>
                     邊充邊用 : 電量低時 可邊USB充電邊使用擴音
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="600">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">距離 :</h4>
-                  <span class="text-3-4">低功率隱藏式天線，距離25 公尺</span>
+                  <span class="text-4">低功率隱藏式天線，距離25 公尺</span>
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="1200">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">電量顯示 :</h4>
-                  <span class="text-3-4">4段 LED 電量顯示，簡單明瞭</span>
+                  <span class="text-4">4段 LED 電量顯示，簡單明瞭</span>
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="1500">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">有線麥克風 (旗艦版) :</h4>
-                  <span class="text-3-4">音箱兼具無線擴音與有線麥克風混音共用；或是有線講演+手機播放音樂/教材</span>
+                  <span class="text-4">音箱兼具無線擴音與有線麥克風混音共用；或是有線講演+手機播放音樂/教材</span>
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="1800">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">去麥克風回授 (專業版) :</h4>
-                  <span class="text-3-4">針對有線麥克風另有特殊設計，避免近距離聲音回授、尖叫</span>
+                  <span class="text-4">針對有線麥克風另有特殊設計，避免近距離聲音回授、尖叫</span>
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="2100">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">全球獨家 :</h4>
-                  <span class="text-3-4">台灣設計、開發、生產，<span class="text-success font-weight-semibold text-4">台灣首發
+                  <span class="text-4">台灣設計、開發、生產，<span class="text-success font-weight-semibold text-4">台灣首發
                       全球獨家</span>。</span>
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="2400">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">產品規格:</h4>
-                  <span class="text-3-4">
+                  <span class="text-4">
                     1. 尺寸 11.8 x 8.2 x 5.8 cm<br>
                     2. 重量 299g （規格以實際產品為主)<br>
                     3. 喇叭功率 10W<br>
