--- a/shop.html
+++ b/shop.html
@@ -160,7 +160,7 @@
 						</div>
 						<div class="row">
 							<div class="col p-static">
-								<h1 class="text-5 font-weight-extra-bold" data-title-border>哪裡購買</h1>
+								<h1 class="text-5-6 font-weight-extra-bold" data-title-border>哪裡購買</h1>
 							</div>
 						</div>
 					</div>
@@ -169,8 +169,8 @@
 				<div class="container py-4">
 				  <div class="row">
 				    <div class="col mb-5">
-				      <p class="line-height-7 text-3-4 mb-2 mt-3">我們是新創公司，目前產品是用網路方式做行銷，奇摩、露天、蝦皮平台都有銷售，產品銷售也都有7天鑑賞期。</p>
-              <p class="line-height-7 text-3-4 mb-3">若有團購、學校採購或其他任何問題， 請致電或 Line, FB 跟我們公司連絡或確認。</p>
+				      <p class="line-height-7 text-4 mb-2 mt-3">我們是新創公司，目前產品是用網路方式做行銷，奇摩、露天、蝦皮平台都有銷售，產品銷售也都有7天鑑賞期。</p>
+              <p class="line-height-7 text-4 mb-3">若有團購、學校採購或其他任何問題， 請致電或 Line, FB 跟我們公司連絡或確認。</p>
               <div class="shop__group">
               	<a href="https://shopee.tw/youngtone" target="_blank">
               		<img src="img/sales/sale-shopee.png">
@@ -185,21 +185,21 @@
               <h2 class="font-weight-extra-bold text-5 mb-2">
               	展售實體店家
               </h2>
-							<p class="line-height-7 text-3-4 mb-3">下列為銷售養聲堂無線擴音產品之實體店家，展售以無線麥克風(YS-100,
+							<p class="line-height-7 text-4 mb-3">下列為銷售養聲堂無線擴音產品之實體店家，展售以無線麥克風(YS-100,
 								YS-150)，無線擴音音箱(YS-250)為主，欲前往店面購買時請先撥電話詢問有無現貨，以免向隅。</p>
-							<p class="line-height-7 text-3-4 mb-3">若您所在的縣市尚無銷售店家，有無線音頻主機(YS-200) 套件之需求, 或有產品技術或維修事宜, 請來電(02)2395-5780養聲堂科技，或從Line , Facebook頁面向我們聯繫購買事宜。謝謝您！</p>
-
+							<p class="line-height-7 text-4 mb-3">若您所在的縣市尚無銷售店家，有無線音頻主機(YS-200) 套件之需求, 或有產品技術或維修事宜, 請來電(02)2395-5780養聲堂科技，或從Line , Facebook頁面向我們聯繫購買事宜。謝謝您！</p>
+							<hr>
 							<p class="line-height-7 text-4 mb-3 font-weight-extra-bold text-primary">台北市</p>
 							<p class="line-height-7 text-4 mb-3">
-							<span class="font-weight-extra-bold">欣晟電器</span><br>
-							台北市中正區延平南路13號之1(博愛路及開封街口)<br>
+							<span class="font-weight-extra-bold text-tertiary">欣晟電器</span><br>
+							<span class="font-weight-extra-bold text-tertiary">台北市中正區延平南路13號之1</span>(博愛路及開封街口)<br>
 							營業時間 : 週一至週五10:00~18:00，周六12:00~18:00<br>
 							電話： 02-23610008</p>
 
 							<p class="line-height-7 text-4 mb-3 font-weight-extra-bold text-primary">桃園市</p>
 							<p class="line-height-7 text-4 mb-3">
-							<span class="font-weight-extra-bold">小天使水果店</span><br>
-							330桃園市桃園區南華街133號<br>
+							<span class="font-weight-extra-bold text-tertiary">小天使水果店</span><br>
+							<span class="font-weight-extra-bold text-tertiary">330桃園市桃園區南華街133號</span><br>
 							營業時間 : 07:00~18:00 (周一 & 國定假日休息)<br>
 							電話：0932200672 林先生 (養聲堂聲學顧問)</p>
 
